crates/aranya-policy-compiler/tests/data/type_errors/match_pattern_wrong_type_invalid_type.fail.policy
function foo(x int) bool {
    match x {
        "foo" => {
        }
        _ => {}
    }
}
